[gd_scene load_steps=2 format=3 uid="uid://d15ie3fq0lfw4"]

[ext_resource type="Script" path="res://event_editor/nodes/keyword_node/keyword_gn.gd" id="1_phxsq"]

[node name="KeywordNode" type="GraphNode" node_paths=PackedStringArray("keyword_line_edit", "text_preview")]
custom_minimum_size = Vector2(0, 120)
offset_right = 252.0
offset_bottom = 127.0
title = "消息Ex - 思考关键词"
slot/0/left_enabled = true
slot/0/left_type = 1204
slot/0/left_color = Color(0, 0.670588, 0.65098, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 1204
slot/1/left_color = Color(0, 0.670588, 0.65098, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 1205
slot/3/right_color = Color(0.223529, 0.560784, 0.141176, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_phxsq")
keyword_line_edit = NodePath("HSplitContainer/TextEdit")
text_preview = NodePath("HSplitContainer2/TextPreview")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
dragger_visibility = 1

[node name="Label" type="Label" parent="HSplitContainer"]
layout_mode = 2
text = "关键词文本键"

[node name="TextEdit" type="LineEdit" parent="HSplitContainer"]
layout_mode = 2
placeholder_text = "请输入文字键"

[node name="HSplitContainer2" type="HSplitContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
dragger_visibility = 1

[node name="Label" type="Label" parent="HSplitContainer2"]
layout_mode = 2
text = "文本预览"

[node name="TextPreview" type="LineEdit" parent="HSplitContainer2"]
layout_mode = 2
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "思考回调"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "物品联想节点"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="HBoxContainer3"]
layout_mode = 2
text = "物品未匹配"
